--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="https://cdn2.iconfinder.com/data/icons/social-icons-color/512/flipkart-256.png"
         type="image/x-icon">
     <!-- <link rel="stylesheet" href="Kart.css" class="stylesheet"> -->
-    <link rel="stylesheet" href="Kart1.css" class="stylesheet">
+    <link rel="stylesheet" href="index.css" class="stylesheet">
 
 </head>
 
