--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link rel="shortcut icon" href="https://cdn2.iconfinder.com/data/icons/social-icons-color/512/flipkart-256.png"
         type="image/x-icon">
     <!-- <link rel="stylesheet" href="Kart.css" class="stylesheet"> -->
-    <link rel="stylesheet" href="index.css" class="stylesheet">
+    <link rel="stylesheet" href="assets/index.css" class="stylesheet">
 
 </head>
 
 <body>
     <header>
 
-        <img class="logo" src="fliplogo.png" alt="Flipkart">
+        <img class="logo" src="assets/fliplogo.png" alt="Flipkart">
 
 
 
         <div class="search">
-            <img src="sicon.png" alt="i">
+            <img src="assets/sicon.png" alt="i">
             <!-- <button type="button">click</button> -->
             <input type="text" placeholder="Search for products,brands and more">
 
@@ -39,12 +39,12 @@
     <main>
         <div class="box1">
             <div class="img">
-                <img class="img1" src="topoffer.webp" alt="img">
-                <img class="img1" src="grocery.webp" alt="img">
-                <img class="img1" src="mobile.webp" alt="img">
-                <img class="img1" src="fashion.webp" alt="img">
-                <img class="img1" src="electro.webp" alt="img">
-                <img class="img1" src="travel.webp" alt="img">
+                <img class="img1" src="assets/topoffer.webp" alt="img">
+                <img class="img1" src="assets/grocery.webp" alt="img">
+                <img class="img1" src="assets/mobile.webp" alt="img">
+                <img class="img1" src="assets/fashion.webp" alt="img">
+                <img class="img1" src="assets/electro.webp" alt="img">
+                <img class="img1" src="assets/travel.webp" alt="img">
             </div>
             <div class="img1-name">
                 <p class="name1">Top Offers</p>
@@ -57,7 +57,7 @@
         </div>
         <div class="leader">
             <div class="slid">
-                <img class="slid1" src="slid1.png" alt="">
+                <img class="slid1" src="assets/slid1.png" alt="">
                 <!-- <img class="slid2" src="slid2.png" alt=""> -->
                 <!-- <img class="slid3" src="slid3.png" alt=""> -->
             </div>
@@ -71,12 +71,12 @@
                     <hr>
 
                     <div class="item-img">
-                        <img src="item1.webp" alt="">
-                        <img src="item2.webp" alt="">
-                        <img src="item3.webp" alt="">
-                        <img src="item4.webp" alt="">
-                        <img src="item5.webp" alt="">
-                        <img src="item6.webp" alt="">
+                        <img src="assets/item1.webp" alt="">
+                        <img src="assets/item2.webp" alt="">
+                        <img src="assets/item3.webp" alt="">
+                        <img src="assets/item4.webp" alt="">
+                        <img src="assets/item5.webp" alt="">
+                        <img src="assets/item6.webp" alt="">
                     </div>
                     <div class="item-name">
                         <p id="item-name1">12th Gen Laptop</p>
@@ -111,12 +111,12 @@
                         <hr>
 
                         <div class="item-img">
-                            <img src="item1.webp" alt="">
-                            <img src="item2.webp" alt="">
-                            <img src="item3.webp" alt="">
-                            <img src="item4.webp" alt="">
-                            <img src="item5.webp" alt="">
-                            <img src="item6.webp" alt="">
+                            <img src="assets/item1.webp" alt="">
+                            <img src="assets/item2.webp" alt="">
+                            <img src="assets/item3.webp" alt="">
+                            <img src="assets/item4.webp" alt="">
+                            <img src="assets/item5.webp" alt="">
+                            <img src="assets/item6.webp" alt="">
                         </div>
                         <div class="item-name">
                             <p id="item-name1">12th Gen Laptop</p>
